--- a/VolunteerHub/Views/AdminHubView.axaml
+++ b/VolunteerHub/Views/AdminHubView.axaml
@@ -2,48 +2,85 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-			 xmlns:ctrls="clr-namespace:VolunteerHub.Views.Controls"
+             xmlns:materialIcons="clr-namespace:Material.Icons.Avalonia;assembly=Material.Icons.Avalonia"
+             xmlns:vm="clr-namespace:VolunteerHub.ViewModels"
+             xmlns:ctrls="clr-namespace:VolunteerHub.Views.Controls"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="VolunteerHub.Views.AdminHubView">
-	<SplitView IsPaneOpen="{Binding #Menu.IsPointerOver} "
-           DisplayMode="CompactInline">
-		<SplitView.Pane>
-			<ScrollViewer>
-				<ListBox x:Name="Menu" SelectedItem="{Binding SelectedAProject}" ItemsSource="{Binding Projects}" >
-					<ListBox.ItemTemplate>
-						<DataTemplate>
-							<StackPanel>
-								<TextBlock Text="{Binding Project.ProjectName}" TextTrimming="CharacterEllipsis"/>
-							</StackPanel>
-						</DataTemplate>
-					</ListBox.ItemTemplate>
-				</ListBox>
-			</ScrollViewer>
-		</SplitView.Pane>
-		<SplitView.Content>
-			<Grid RowDefinitions="*,Auto,Auto" ColumnDefinitions="1*,1*">
-				<ctrls:ProjectTile Grid.ColumnSpan="2" Grid.Row ="0" IsVisible="{Binding #Menu.SelectedItem, Converter={StaticResource ProjectIsNullConverter}}" DataContext="{Binding #Menu.SelectedItem}" ></ctrls:ProjectTile>
-				<ListBox Name="UserList" SelectedItem="{Binding SelectedUser}" Grid.ColumnSpan="2" Grid.Row="1" ItemsSource="{Binding #Menu.SelectedItem.Users}">
-					<ListBox.ItemTemplate>
-						<DataTemplate>
-							<StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Spacing="10">
-								<TextBlock Text="{Binding Username}"/>
-								<TextBlock Text="{Binding Email}"/>
-							</StackPanel>
-						</DataTemplate>
-					</ListBox.ItemTemplate>
-				</ListBox>
-				<StackPanel Grid.Row="2" Orientation="Horizontal">
-					<Button Command="{Binding AddVolunteer}" IsVisible="False"> 
-						Добавить волонтера
-					</Button>
-					<Button Command="{Binding RemoveVolunteer}" 
-							IsVisible="{Binding #UserList.SelectedUser, Converter={StaticResource ProjectIsNullConverter}}"
-							Content="Удалить волонтера"/>
-				</StackPanel>
-				
-			</Grid>
-		</SplitView.Content>
-	</SplitView>
 
+	<SplitView IsPaneOpen="{Binding IsModePaneOpen, Mode=TwoWay}" DisplayMode="Inline">
+		<SplitView.Pane>
+			<Border BorderThickness="1" BorderBrush="Black">
+				<ScrollViewer>
+					<TextBlock>В разработке</TextBlock>
+					<!--<ListBox>
+						<ListBoxItem>
+							<TextBlock>Проекты и волонтеры</TextBlock>
+						</ListBoxItem>
+						<ListBoxItem>
+							<TextBlock>Создать проект</TextBlock>
+
+						</ListBoxItem>
+						<ListBoxItem>
+							<TextBlock>Задачи</TextBlock>
+
+						</ListBoxItem>
+					</ListBox>-->
+				</ScrollViewer>
+			</Border>
+		</SplitView.Pane>
+		<SplitView IsPaneOpen="{Binding #Menu.IsPointerOver}" OpenPaneLength="300" DisplayMode="CompactInline">
+			<SplitView.Pane>
+				<ScrollViewer>
+					<ListBox x:Name="Menu" SelectedItem="{Binding SelectedProject}" ItemsSource="{Binding Projects}">
+						<ListBox.ItemTemplate>
+							<DataTemplate>
+								<TextBlock Text="{Binding ProjectName}" TextTrimming="CharacterEllipsis"/>
+							</DataTemplate>
+						</ListBox.ItemTemplate>
+					</ListBox>
+				</ScrollViewer>
+			</SplitView.Pane>
+			<SplitView.Content>
+				<Grid RowDefinitions="*,Auto,Auto" ColumnDefinitions="1*,1*">
+					<!-- Кнопка для открытия/закрытия меню -->
+					<Button Command="{Binding OpenCloseMenuPane}" Padding="0" Margin="10" HorizontalAlignment="Right" VerticalAlignment="Top" Grid.Row="0" Grid.ColumnSpan="2">
+						<materialIcons:MaterialIcon Kind="Settings"/>
+					</Button>
+
+					<!-- Виджет для отображения выбранного проекта -->
+					<ctrls:ProjectTile DataContext="{Binding SelectedProject}" IsVisible="{Binding SelectedProject, Converter={StaticResource ProjectIsNullConverter}, FallbackValue=false}" Grid.ColumnSpan="2" Grid.Row="0"/>
+
+					<!-- Список пользователей для выбранного проекта -->
+					<ListBox Name="UserList" SelectedItem="{Binding SelectedUser}" Grid.ColumnSpan="2" Grid.Row="1" ItemsSource="{Binding Users}">
+						<ListBox.ItemTemplate>
+							<DataTemplate>
+								<StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Spacing="10">
+									<TextBlock Text="{Binding Username}"/>
+									<TextBlock Text="{Binding Email}"/>
+								</StackPanel>
+							</DataTemplate>
+						</ListBox.ItemTemplate>
+					</ListBox>
+
+					<!-- Кнопка для удаления волонтера -->
+					<StackPanel Grid.Row="2" Grid.ColumnSpan="2" HorizontalAlignment="Center" Orientation="Horizontal">
+						<Button Command="{Binding AddVolunteer}" IsVisible="False">
+							Добавить волонтера
+						</Button>
+						<Button Command="{Binding RemoveVolunteer}" 	IsVisible="{Binding SelectedUser,  Converter={StaticResource ProjectIsNullConverter}}" Content="Удалить волонтера"/>
+					</StackPanel>
+
+					<!-- ComboBox для выбора статуса проекта -->
+					<ComboBox Grid.Row="0" Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Center" ItemsSource="{Binding Statuses}" SelectedItem="{Binding SelectedStatus}" IsVisible="{Binding SelectedProject, Converter={StaticResource ProjectIsNullConverter}}">
+						<ComboBox.ItemTemplate>
+							<DataTemplate>
+								<TextBlock Text="{Binding StatusName}"/>
+							</DataTemplate>
+						</ComboBox.ItemTemplate>
+					</ComboBox>
+				</Grid>
+			</SplitView.Content>
+		</SplitView>
+	</SplitView>
 </UserControl>
